# serde_atproto_dagjson

./: Cargo.toml  README.md
src/: de.rs  lib.rs  ser.rs  shared.rs
tests/: codec.rs  de.rs  ser.rs
