[package]
name = "serde_atproto_dagjson"
version = "0.2.0"
authors = [
  "Volker Mische <volker.mische@gmail.com>",
  "Jon Musselwhite (@musselwhite.dev)",
]
repository = "https://github.com/FlippingBinary/serde_atproto_dagjson"
edition = "2021"
description = "At protocol's version of DAG-JSON support for Serde."
license = "MIT OR Apache-2.0"
categories = ["data-structures", "encoding"]

[dependencies]
ipld-core = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["float_roundtrip"] }

[dev-dependencies]
serde_bytes = "0.11.14"
